Seperation of Concerns For Frontend Scripts

--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+	<link rel="stylesheet" type="text/css" href="./static/css/main.css">
 </head>
-<body style="background: white;">
+
+<body>
+	<div id="title" class="titlebar">
+		<button id="close-temp" class="title-button">x</button>
+		<button id="min-temp" class="title-button">_</button>
+	</div>
     <h1>Hello World!</h1>
     <p>
+		<br />
         We are using node <script>document.write(process.versions.node)</script>,
         Chrome <script>document.write(process.versions.chrome)</script>,
         and Electron <script>document.write(process.versions.electron)</script>.
-    </p>
+	</p>
 </body>
-<script>
-    const { ipcRenderer } = require('electron')
 
-    const val = ipcRenderer.sendSync('test', new Date())
-    console.log(val)
-</script>
+<script src="./static/js/events.js"></script>
+<script src="./static//js/actions.js"></script>
 
 </html>
