Connect Client to Websocket Server

--- a/public/index.html
+++ b/public/index.html
@@ -24,5 +24,6 @@
 
 <script src="./static/js/events.js"></script>
 <script src="./static//js/actions.js"></script>
+<script src="./static/js/socket.js"></script>
 
 </html>
